fix alignment of buttons

--- a/app/assets/stylesheets/summaries.css.scss
+++ b/app/assets/stylesheets/summaries.css.scss
@@ -1,3 +1,9 @@
+.content-summary-header {
+  .view-buttons {
+    float: right;
+  }
+}
+
 .content-summary {
   table.nice {
     tr {
